--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
   "manifest_version": 2,
 
   "name": "Alldebrid",
-  "description": "Better interface for alldebrid alltogheter.",
-  "version": "0.2.0",
+  "description": "Alternative interface for AllDebrid",
+  "version": "0.3.0",
   "minimum_chrome_version": "31",
 
   "icons": {
