--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "alldebrid",
-  "version": "0.3.4",
+  "name": "alldebrid-chrome",
+  "version": "0.3.5",
   "authors": [
     "mrgamer <mister.gamer@gmail.com>"
   ],
