--- a/manifest.json
+++ b/manifest.json
@@ -3,10 +3,11 @@
 
   "name": "Alldebrid",
   "description": "Alternative interface for AllDebrid",
-  "version": "0.3.4",
+  "version": "0.3.5",
   "minimum_chrome_version": "31",
 
   "icons": {
+    "48": "icon_48.png",
     "128": "icon_128.png"
   },
   "app": {
