--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
   "manifest_version": 2,
 
-  "name": "Alldebrid",
-  "description": "Alternative interface for AllDebrid",
-  "version": "0.3.5",
+  "name": "AllDebrid as a Chrome App",
+  "description": "alternative interface for AllDebrid",
+  "version": "0.3.5.1",
   "minimum_chrome_version": "31",
 
   "icons": {
@@ -18,5 +18,6 @@
   "permissions": [
     "http://*.alldebrid.com/*",
     "storage"
-  ]
+  ],
+  "short_name": "ad-chrome"
 }
