--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "alldebrid-chrome",
-  "version": "0.3.5.1",
+  "version": "0.3.6",
   "authors": [
     "mrgamer <mister.gamer@gmail.com>"
   ],
@@ -24,6 +24,7 @@
   ],
   "dependencies": {
     "angularjs": "~1.2.21",
-    "angular-hotkeys": "chieffancypants/angular-hotkeys#~1.4.2"
+    "angular-hotkeys": "chieffancypants/angular-hotkeys#~1.4.2",
+    "bootstrap": "~3.2.0"
   }
 }
