--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 2,
-  "name": "AllDebrid as a Chrome App",
-  "description": "alternative interface for AllDebrid",
-  "version": "0.4.2",
+  "name": "AllDebrid for desktop",
+  "description": "alternative interface for AllDebrid service",
+  "version": "0.4.3",
   "minimum_chrome_version": "31",
   "icons": {
     "48": "icon_48.png",
