--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "browserify": "^10.2.4",
     "del": "^1.2.0",
     "gulp": "gulpjs/gulp.git#4.0",
-    "gulp-less": "^3.0.3"
+    "gulp-less": "^3.0.3",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.2.2"
   },
   "scripts": {
     "browserify": "node_modules/.bin/browserify",
+    "watchify": "node_modules/.bin/watchify",
+    "start": "node_modules/.bin/watchify src/ -d -v -o build/bundle.js",
     "gulp": "node_modules/.bin/gulp",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
