--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "angular": "^1.4.0",
     "angular-hotkeys": "^1.4.5",
+    "angular-ui-router": "^0.2.15",
     "bootstrap": "^3.3.4"
   }
 }
