--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
   "description": "\"alternative interface for AllDebrid",
   "main": "main.js",
   "devDependencies": {
-    "browserify": "^10.2.4",
+    "browserify": "^11.0.0",
+    "bulk-require": "^0.2.1",
+    "bulkify": "^1.1.1",
     "del": "^1.2.0",
-    "gulp": "gulpjs/gulp.git#4.0",
-    "gulp-angular-templatecache": "^1.6.0",
-    "gulp-angular-templates": "0.0.1",
+    "gulp": "gulpjs/gulp#4.0",
+    "gulp-angular-templatecache": "^1.7.0",
+    "gulp-angular-templates": "0.0.2",
     "gulp-less": "^3.0.3",
+    "gulp-rename": "^1.2.2",
+    "gulp-util": "^3.0.6",
+    "tsify": "^0.11.2",
     "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.2.2"
+    "watchify": "^3.3.0"
   },
   "scripts": {
     "start": "node_modules/.bin/gulp",
@@ -34,9 +39,9 @@
   },
   "homepage": "https://github.com/mrgamer/alldebrid-chrome",
   "dependencies": {
-    "angular": "^1.4.0",
+    "angular": "^1.4.3",
     "angular-hotkeys": "^1.4.5",
     "angular-ui-router": "^0.2.15",
-    "bootstrap": "^3.3.4"
+    "bootstrap": "^3.3.5"
   }
 }
