--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "main.js",
   "devDependencies": {
     "browserify": "^11.0.0",
+    "browserify-shim": "^3.8.10",
     "bulk-require": "^0.2.1",
     "bulkify": "^1.1.1",
+    "debug": "^2.2.0",
     "del": "^1.2.0",
     "express": "^4.13.1",
     "gulp": "gulpjs/gulp#4.0",
@@ -16,7 +18,6 @@
     "gulp-rename": "^1.2.2",
     "gulp-util": "^3.0.6",
     "http-proxy": "^1.11.1",
-    "tsify": "^0.11.2",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.3.0"
   },
