--- a/.eslintrc
+++ b/.eslintrc
@@ -18,6 +18,7 @@
     "indent": [2, 2],
     "new-cap": 0,
     "no-floating-decimal": 2,
+    "no-mixed-requires": 0,
     "no-nested-ternary": 2,
     "no-sequences": 0,
     "no-shadow": 0,
