css, gulp fixes, eslint...

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,5 @@
 {
+  "eslint": "reccommended",
   "env": {
     "browser": true,
     "es6": true,
@@ -28,6 +29,7 @@
     "no-var": 0,
     "quotes": [1, "single"],
     "radix": 2,
+    "semi": [2, "always"],
     "space-after-keywords": [2, "always"],
     "space-before-blocks": 2,
     "space-before-function-paren": 2,
