--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-util": "^3.0.6",
     "http-proxy": "^1.11.1",
-    "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.3.0"
+    "vinyl-source-stream": "^1.1.0"
   },
   "scripts": {
     "start": "node_modules/.bin/gulp",
