git revision is now written inside the footer

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "bulkify": "^1.1.1",
     "debug": "^2.2.0",
     "del": "^1.2.0",
+    "envify": "^3.4.0",
     "express": "^4.13.1",
+    "git-rev": "^0.2.1",
     "gulp": "gulpjs/gulp#4.0",
     "gulp-angular-templatecache": "^1.7.0",
     "gulp-angular-templates": "0.0.2",
