experiments with gulp-rev, but it does not work.

--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
     "gulp": "gulpjs/gulp#4.0",
     "gulp-angular-templatecache": "^1.7.0",
     "gulp-angular-templates": "0.0.2",
+    "gulp-buffer": "0.0.2",
     "gulp-less": "^3.0.3",
+    "gulp-nunjucks-render": "^1.0.0",
     "gulp-rename": "^1.2.2",
+    "gulp-rev": "^6.0.1",
+    "gulp-rev-all": "^0.8.21",
     "gulp-util": "^3.0.6",
     "http-proxy": "^1.11.1",
     "vinyl-source-stream": "^1.1.0"
