--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "vinyl-source-stream": "^1.1.0"
   },
   "scripts": {
-    "deploy-ubuntu": "gulp nginx && sudo cp nginx/* /etc/nginx/sites-available/",
-    "start": "node_modules/.bin/gulp",
+    "deploy-ubuntu": "gulp build && gulp nginx && sudo cp nginx/* /etc/nginx/sites-available/",
+    "start": "gulp",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
