--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp-rev": "colthreepv/gulp-rev",
     "gulp-util": "^3.0.6",
     "http-proxy": "^1.11.1",
+    "serve-static": "^1.10.0",
     "vinyl-source-stream": "^1.1.0"
   },
   "scripts": {
