--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "alldebrid",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "\"alternative interface for AllDebrid",
   "main": "main.js",
   "devDependencies": {
@@ -19,7 +19,7 @@
     "gulp-less": "^3.0.3",
     "gulp-nunjucks-render": "^1.0.0",
     "gulp-rename": "^1.2.2",
-    "gulp-rev": "colthreepv/gulp-rev",
+    "gulp-rev": "^6.0.1",
     "gulp-util": "^3.0.6",
     "http-proxy": "^1.11.1",
     "serve-static": "^1.10.0",
