--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "gulp": "gulpjs/gulp#4.0",
     "gulp-angular-templatecache": "^1.7.0",
     "gulp-buffer": "0.0.2",
+    "gulp-if": "^2.0.0",
     "gulp-less": "^3.0.3",
     "gulp-nunjucks-render": "^1.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-rev": "^6.0.1",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^1.4.1",
     "gulp-util": "^3.0.6",
     "http-proxy": "^1.11.1",
     "serve-static": "^1.10.0",
