--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "vinyl-source-stream": "^1.1.0"
   },
   "scripts": {
+    "backend": "node backend/",
     "deploy-ubuntu": "gulp build-dist && gulp nginx && sudo cp nginx/* /etc/nginx/sites-available/ && sudo nginx -t && sudo service nginx restart",
     "start": "gulp",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -56,7 +57,8 @@
     "angular-hotkeys": "^1.4.5",
     "angular-ui-router": "^0.2.15",
     "bootstrap-sass": "^3.3.5",
-    "bootswatch-scss": "^3.2.0"
+    "bootswatch-scss": "^3.2.0",
+    "express": "^4.13.4"
   },
   "production-deps": {
     "angular": "//cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular.min.js",
