--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "browserify-shim": "^3.8.10",
     "bulk-require": "^0.2.1",
     "bulkify": "^1.1.1",
+    "chai": "^3.5.0",
     "debug": "^2.2.0",
     "del": "^2.2.0",
     "envify": "^3.4.0",
@@ -26,6 +27,7 @@
     "gulp-uglify": "^1.4.1",
     "gulp-util": "^3.0.6",
     "http-proxy": "^1.11.1",
+    "mocha": "^2.4.5",
     "pretty-error": "^2.0.0",
     "serve-static": "^1.10.0",
     "vinyl-source-stream": "^1.1.0"
@@ -34,7 +36,7 @@
     "backend": "node backend/",
     "deploy-ubuntu": "gulp build-dist && gulp nginx && sudo cp nginx/* /etc/nginx/sites-available/ && sudo nginx -t && sudo service nginx restart",
     "start": "gulp",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha -R spec backend/*.test.js"
   },
   "repository": {
     "type": "git",
@@ -56,12 +58,15 @@
     "angular": "^1.4.3",
     "angular-ui-router": "^0.2.15",
     "bluebird": "^3.2.1",
+    "body-parser": "^1.15.0",
     "bootstrap-sass": "^3.3.5",
     "bootswatch-scss": "^3.2.0",
     "cheerio": "^0.20.0",
     "express": "^4.13.4",
     "ioredis": "^1.15.0",
     "joi": "^7.2.3",
+    "leveldown": "^1.4.4",
+    "levelup": "^1.3.1",
     "request-promise": "^2.0.0"
   },
   "production-deps": {
