--- a/package.json
+++ b/package.json
@@ -62,12 +62,15 @@
     "bootstrap-sass": "^3.3.5",
     "bootswatch-scss": "^3.2.0",
     "cheerio": "^0.20.0",
+    "cookie-parser": "^1.4.1",
     "express": "^4.13.4",
+    "express-validation": "colthreepv/express-validation#0.5.x",
     "ioredis": "^1.15.0",
     "joi": "^7.2.3",
     "leveldown": "^1.4.4",
     "levelup": "^1.3.1",
-    "request-promise": "^2.0.0"
+    "request-promise": "^2.0.0",
+    "x-error": "0.0.10"
   },
   "production-deps": {
     "angular": "//cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular.min.js",
