--- a/package.json
+++ b/package.json
@@ -64,9 +64,12 @@
     "cheerio": "^0.20.0",
     "cookie-parser": "^1.4.1",
     "express": "^4.13.4",
+    "express-session": "^1.13.0",
+    "express-session-level": "^1.0.0",
     "express-validation": "colthreepv/express-validation#0.5.x",
     "ioredis": "^1.15.0",
     "joi": "^7.2.3",
+    "level-ttl": "^3.1.0",
     "leveldown": "^1.4.4",
     "levelup": "^1.3.1",
     "request-promise": "^2.0.0",
