--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "debug": "^2.2.0",
     "del": "^2.2.0",
     "envify": "^3.4.0",
-    "express": "^4.13.1",
     "git-rev": "^0.2.1",
     "gulp": "gulpjs/gulp#4.0",
     "gulp-angular-templatecache": "^1.7.0",
@@ -28,12 +27,14 @@
     "gulp-util": "^3.0.6",
     "http-proxy": "^1.11.1",
     "mocha": "^2.4.5",
+    "nodemon": "^1.9.1",
     "pretty-error": "^2.0.0",
     "serve-static": "^1.10.0",
     "vinyl-source-stream": "^1.1.0"
   },
   "scripts": {
     "backend": "node backend/",
+    "dev": "nodemon backend/ -w backend/ -V",
     "deploy-ubuntu": "gulp build-dist && gulp nginx && sudo cp nginx/* /etc/nginx/sites-available/ && sudo nginx -t && sudo service nginx restart",
     "start": "gulp",
     "test": "mocha -R spec backend/*.test.js"
@@ -66,9 +67,10 @@
     "express": "^4.13.4",
     "express-session": "^1.13.0",
     "express-session-level": "^1.0.0",
-    "express-validation": "colthreepv/express-validation#0.5.x",
+    "express-validation": "^0.5.0",
     "ioredis": "^1.15.0",
     "joi": "^7.2.3",
+    "level": "^1.4.0",
     "level-ttl": "^3.1.0",
     "leveldown": "^1.4.4",
     "levelup": "^1.3.1",
