--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "level-ttl": "^3.1.0",
     "leveldown": "^1.4.4",
     "levelup": "^1.3.1",
+    "nunjucks": "^2.4.0",
     "request-promise": "^2.0.0",
     "x-error": "0.0.10"
   },
