--- a/package.json
+++ b/package.json
@@ -33,10 +33,11 @@
     "vinyl-source-stream": "^1.1.0"
   },
   "scripts": {
+    "clean": "rm -rf js && mkdir js",
     "backend": "node backend/",
     "dev": "nodemon backend/ -w backend/ -V",
     "deploy-ubuntu": "gulp build-dist && gulp nginx && sudo cp nginx/* /etc/nginx/sites-available/ && sudo nginx -t && sudo service nginx restart",
-    "start": "gulp",
+    "start": "nodemon backend/ -w backend/ -V",
     "test": "mocha -R spec backend/*.test.js"
   },
   "repository": {
@@ -76,6 +77,7 @@
     "levelup": "^1.3.1",
     "nunjucks": "^2.4.0",
     "request-promise": "^2.0.0",
+    "webpack": "^1.12.14",
     "x-error": "0.0.10"
   },
   "production-deps": {
