--- a/package.json
+++ b/package.json
@@ -1,43 +1,41 @@
 {
   "name": "alldebrid",
-  "version": "1.1.7",
-  "description": "\"alternative interface for AllDebrid",
-  "main": "main.js",
-  "devDependencies": {
-    "browserify": "^13.0.0",
-    "browserify-shim": "^3.8.10",
-    "bulk-require": "^0.2.1",
-    "bulkify": "^1.1.1",
-    "chai": "^3.5.0",
-    "debug": "^2.2.0",
-    "del": "^2.2.0",
-    "envify": "^3.4.0",
-    "git-rev": "^0.2.1",
-    "gulp": "gulpjs/gulp#4.0",
-    "gulp-angular-templatecache": "^1.7.0",
-    "gulp-buffer": "0.0.2",
-    "gulp-if": "^2.0.0",
-    "gulp-less": "^3.0.3",
-    "gulp-nunjucks-render": "^1.0.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-rev": "^6.0.1",
-    "gulp-sass": "^2.0.4",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-uglify": "^1.4.1",
-    "gulp-util": "^3.0.6",
-    "http-proxy": "^1.11.1",
-    "mocha": "^2.4.5",
-    "nodemon": "^1.9.1",
-    "pretty-error": "^2.0.0",
-    "serve-static": "^1.10.0",
-    "vinyl-source-stream": "^1.1.0"
+  "version": "2.0.0-alpha1",
+  "description": "alternative interface for AllDebrid",
+  "dependencies": {
+    "angular": "^1.4.3",
+    "angular-ui-router": "^0.2.15",
+    "bluebird": "^3.2.1",
+    "body-parser": "^1.15.0",
+    "bootstrap-sass": "^3.3.5",
+    "bootswatch-scss": "^3.2.0",
+    "cheerio": "^0.20.0",
+    "classnames": "^2.2.3",
+    "cookie-parser": "^1.4.1",
+    "express": "^4.13.4",
+    "express-session": "^1.13.0",
+    "express-session-level": "^1.0.0",
+    "express-validation": "^0.5.0",
+    "joi": "^8.0.5",
+    "level": "^1.4.0",
+    "level-ttl": "^3.1.0",
+    "leveldown": "^1.4.4",
+    "levelup": "^1.3.1",
+    "promesso": "github:colthreepv/promesso",
+    "react": "^0.14.8",
+    "react-dom": "^0.14.8",
+    "react-redux": "^4.4.1",
+    "redux": "^3.3.1",
+    "redux-thunk": "^2.0.1",
+    "request-promise": "^2.0.0",
+    "x-error": "0.0.10"
   },
   "scripts": {
-    "clean": "rm -rf js && mkdir js",
+    "clean": "rimraf build && mkdirp build",
     "backend": "node backend/",
-    "dev": "nodemon backend/ -w backend/ -V",
+    "development": "nodemon backend/ -w backend/ -V",
     "deploy-ubuntu": "gulp build-dist && gulp nginx && sudo cp nginx/* /etc/nginx/sites-available/ && sudo nginx -t && sudo service nginx restart",
-    "start": "nodemon backend/ -w backend/ -V",
+    "start": "npm run development",
     "test": "mocha -R spec backend/*.test.js"
   },
   "repository": {
@@ -56,36 +54,26 @@
     "url": "https://github.com/mrgamer/alldebrid-chrome/issues"
   },
   "homepage": "https://github.com/mrgamer/alldebrid-chrome",
-  "dependencies": {
-    "angular": "^1.4.3",
-    "angular-ui-router": "^0.2.15",
-    "bluebird": "^3.2.1",
-    "body-parser": "^1.15.0",
-    "bootstrap-sass": "^3.3.5",
-    "bootswatch-scss": "^3.2.0",
-    "cheerio": "^0.20.0",
-    "cookie-parser": "^1.4.1",
-    "express": "^4.13.4",
-    "express-session": "^1.13.0",
-    "express-session-level": "^1.0.0",
-    "express-validation": "^0.5.0",
-    "ioredis": "^1.15.0",
-    "joi": "^7.2.3",
-    "level": "^1.4.0",
-    "level-ttl": "^3.1.0",
-    "leveldown": "^1.4.4",
-    "levelup": "^1.3.1",
-    "nunjucks": "^2.4.0",
-    "request-promise": "^2.0.0",
-    "webpack": "^1.12.14",
-    "x-error": "0.0.10"
-  },
-  "production-deps": {
-    "angular": "//cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular.min.js",
-    "angular-hotkeys": "//cdnjs.cloudflare.com/ajax/libs/angular-hotkeys/1.6.0/hotkeys.min.js",
-    "angular-ui-router": "//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"
-  },
-  "browserify-shim": {
-    "angular": "global:angular"
+  "devDependencies": {
+    "babel-loader": "^6.2.4",
+    "babel-plugin-css-modules-transform": "0.0.8",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-es2015-native-modules": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-register": "^6.7.2",
+    "chai": "^3.5.0",
+    "cross-env": "^1.0.7",
+    "css-loader": "^0.23.1",
+    "debug": "^2.2.0",
+    "git-rev": "^0.2.1",
+    "mocha": "^2.4.5",
+    "node-sass": "^3.4.2",
+    "nodemon": "^1.9.1",
+    "rimraf": "^2.5.2",
+    "sass-loader": "^3.2.0",
+    "serve-static": "^1.10.0",
+    "style-loader": "^0.13.1",
+    "webpack": "^2.1.0-beta.4",
+    "webpack-dev-middleware": "^1.6.1"
   }
 }
