--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "angular": "^1.4.3",
     "angular-ui-router": "^0.2.15",
-    "bluebird": "^3.2.1",
+    "assign-deep": "^0.4.5",
+    "bluebird": "^3.3.4",
     "body-parser": "^1.15.0",
     "bootstrap-sass": "^3.3.5",
     "bootswatch-scss": "^3.2.0",
@@ -56,7 +57,7 @@
   "homepage": "https://github.com/mrgamer/alldebrid-chrome",
   "devDependencies": {
     "babel-loader": "^6.2.4",
-    "babel-plugin-css-modules-transform": "0.0.8",
+    "babel-plugin-css-modules-transform": "0.0.9",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-es2015-native-modules": "^6.6.0",
     "babel-preset-react": "^6.5.0",
