--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cheerio": "^0.20.0",
     "classnames": "^2.2.3",
     "cookie-parser": "^1.4.1",
+    "css-modules-require-hook": "^4.0.0",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
     "express-session-level": "^1.0.0",
