--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "joi": "^8.0.5",
     "level": "^1.4.0",
     "level-ttl": "^3.1.0",
-    "leveldown": "^1.4.4",
+    "leveldown": "=1.4.4",
     "levelup": "^1.3.1",
     "node-watch": "^0.3.5",
     "promesso": "github:colthreepv/promesso",
