--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "leveldown": "=1.4.4",
     "levelup": "^1.3.1",
     "node-watch": "^0.3.5",
-    "promesso": "github:colthreepv/promesso",
+    "promesso": "^2.0.0",
     "react": "^0.14.8",
     "react-dom": "^0.14.8",
     "react-redux": "^4.4.1",
@@ -70,11 +70,10 @@
   "homepage": "https://github.com/colthreepv/alldebrid",
   "devDependencies": {
     "babel-loader": "^6.2.4",
-    "babel-plugin-css-modules-transform": "0.0.9",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-es2015-native-modules": "^6.6.0",
     "babel-preset-react": "^6.5.0",
-    "babel-register": "^6.7.2",
+    "babel-register": "~6.7.2",
     "chai": "^3.5.0",
     "cross-env": "^1.0.7",
     "css-loader": "^0.23.1",
