--- a/package.json
+++ b/package.json
@@ -4,34 +4,34 @@
   "description": "alternative interface for AllDebrid",
   "dependencies": {
     "assign-deep": "^0.4.5",
-    "bluebird": "^3.3.4",
+    "bluebird": "^3.4.0",
     "body-parser": "^1.15.0",
     "bootstrap-sass": "^3.3.5",
     "bootswatch-scss": "^3.2.0",
     "cheerio": "^0.20.0",
     "classnames": "^2.2.3",
-    "concurrently": "^2.0.0",
+    "concurrently": "^2.1.0",
     "cookie-parser": "^1.4.1",
     "css-modules-require-hook": "^4.0.0",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
     "express-session-level": "^1.0.0",
-    "express-validation": "^0.5.0",
+    "express-validation": "^0.6.0",
     "joi": "^8.0.5",
     "level": "^1.4.0",
     "level-ttl": "^3.1.0",
     "leveldown": "=1.4.4",
-    "levelup": "^1.3.1",
+    "levelup": "^1.3.2",
     "node-watch": "^0.3.5",
-    "promesso": "^2.0.0",
-    "react": "^0.14.8",
-    "react-dom": "^0.14.8",
+    "promesso": "^3.0.0",
+    "react": "^15.0.2",
+    "react-dom": "^15.0.2",
     "react-redux": "^4.4.1",
     "react-router": "^2.2.2",
     "react-router-redux": "^4.0.2",
     "redux": "^3.3.1",
     "redux-thunk": "^2.0.1",
-    "request-promise": "^2.0.0",
+    "request-promise": "^3.0.0",
     "x-error": "0.0.10"
   },
   "scripts": {
@@ -43,7 +43,8 @@
     "deploy-ubuntu": "gulp build-dist && gulp nginx && sudo cp nginx/* /etc/nginx/sites-available/ && sudo nginx -t && sudo service nginx restart",
     "info": "npm-scripts-info",
     "start": "npm run development",
-    "test": "mocha -R spec backend/*.test.js"
+    "test": "mocha -R spec backend/test/",
+    "test-dev": "mocha -w -R spec backend/test/"
   },
   "scripts-info": {
     "dev:backend": "Starts backend only with nodemon",
@@ -70,10 +71,10 @@
   "homepage": "https://github.com/colthreepv/alldebrid",
   "devDependencies": {
     "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-es2015": "^6.9.0",
     "babel-preset-es2015-native-modules": "^6.6.0",
     "babel-preset-react": "^6.5.0",
-    "babel-register": "~6.7.2",
+    "babel-register": "^6.9.0",
     "chai": "^3.5.0",
     "cross-env": "^1.0.7",
     "css-loader": "^0.23.1",
