--- a/package.json
+++ b/package.json
@@ -3,37 +3,8 @@
   "version": "2.0.0-alpha1",
   "description": "alternative interface for AllDebrid",
   "dependencies": {
-    "assign-deep": "^0.4.5",
-    "axios": "^0.11.1",
-    "bluebird": "^3.4.0",
-    "body-parser": "^1.15.0",
     "bootstrap-sass": "^3.3.5",
-    "bootswatch-scss": "^3.2.0",
-    "cheerio": "^0.20.0",
-    "classnames": "^2.2.3",
-    "concurrently": "^2.1.0",
-    "cookie-parser": "^1.4.1",
-    "css-modules-require-hook": "^4.0.0",
-    "express": "^4.13.4",
-    "express-session": "^1.13.0",
-    "express-session-level": "^1.0.0",
-    "express-validation": "^0.6.0",
-    "joi": "^8.0.5",
-    "level": "^1.4.0",
-    "level-ttl": "^3.1.0",
-    "leveldown": "=1.4.4",
-    "levelup": "^1.3.2",
-    "node-watch": "^0.3.5",
-    "promesso": "^3.0.0",
-    "react": "^15.0.2",
-    "react-dom": "^15.0.2",
-    "react-redux": "^4.4.1",
-    "react-router": "^2.2.2",
-    "react-router-redux": "^4.0.2",
-    "redux": "^3.3.1",
-    "redux-thunk": "^2.0.1",
-    "request-promise": "^3.0.0",
-    "x-error": "0.0.10"
+    "bootswatch-scss": "^3.2.0"
   },
   "scripts": {
     "dev:backend": "nodemon backend/ -w backend/ -V",
@@ -43,6 +14,7 @@
     "development": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
     "deploy-ubuntu": "gulp build-dist && gulp nginx && sudo cp nginx/* /etc/nginx/sites-available/ && sudo nginx -t && sudo service nginx restart",
     "info": "npm-scripts-info",
+    "install": "cd backend && npm install && cd ..",
     "start": "npm run development",
     "test": "mocha -R spec backend/test/",
     "test-dev": "mocha -w -R spec backend/test/"
@@ -72,24 +44,17 @@
   "homepage": "https://github.com/colthreepv/alldebrid",
   "devDependencies": {
     "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.9.0",
     "babel-preset-es2015-native-modules": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-register": "^6.9.0",
-    "chai": "^3.5.0",
+    "concurrently": "^2.1.0",
     "cross-env": "^1.0.7",
     "css-loader": "^0.23.1",
-    "debug": "^2.2.0",
     "git-rev": "^0.2.1",
-    "mocha": "^2.4.5",
     "node-sass": "^3.4.2",
-    "nodemon": "^1.9.1",
     "npm-scripts-info": "^0.3.6",
     "rimraf": "^2.5.2",
     "sass-loader": "^3.2.0",
-    "serve-static": "^1.10.0",
     "style-loader": "^0.13.1",
-    "webpack": "^2.1.0-beta.4",
-    "webpack-dev-server": "github:webpack/webpack-dev-server"
+    "webpack": "^2.1.0-beta.7",
+    "webpack-dev-server": "^2.1.0-beta.0"
   }
 }
