--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "2.0.0-alpha1",
   "description": "alternative interface for AllDebrid",
   "dependencies": {
+    "angular": "^1.5.6",
     "bootstrap-sass": "^3.3.5",
     "bootswatch-scss": "^3.2.0"
   },
@@ -46,10 +47,12 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015-native-modules": "^6.6.0",
     "concurrently": "^2.1.0",
+    "copy-webpack-plugin": "^3.0.0",
     "cross-env": "^1.0.7",
     "css-loader": "^0.23.1",
     "git-rev": "^0.2.1",
     "node-sass": "^3.4.2",
+    "nodemon": "^1.9.2",
     "npm-scripts-info": "^0.3.6",
     "rimraf": "^2.5.2",
     "sass-loader": "^3.2.0",
