I think I succeded to build scss with webpack - most complicated thing ever...^?

--- a/package.json
+++ b/package.json
@@ -8,15 +8,20 @@
     "bootswatch-scss": "^3.2.0"
   },
   "scripts": {
-    "dev:backend": "nodemon backend/ -w backend/ -V",
-    "dev:frontend": "webpack-dev-server --inline",
     "clean": "rimraf build && mkdirp build",
+    "build": "cross-env NODE_ENV=production webpack",
     "backend": "node backend/",
+
     "development": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
+      "dev:backend": "nodemon backend/ -w backend/ -V",
+      "dev:frontend": "webpack-dev-server --inline",
+
+    "start": "npm run development",
+    "install": "cd backend && npm install && cd ..",
+
     "deploy-ubuntu": "gulp build-dist && gulp nginx && sudo cp nginx/* /etc/nginx/sites-available/ && sudo nginx -t && sudo service nginx restart",
     "info": "npm-scripts-info",
-    "install": "cd backend && npm install && cd ..",
-    "start": "npm run development",
+
     "test": "mocha -R spec backend/test/",
     "test-dev": "mocha -w -R spec backend/test/"
   },
@@ -47,9 +52,9 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015-native-modules": "^6.6.0",
     "concurrently": "^2.1.0",
-    "copy-webpack-plugin": "^3.0.0",
     "cross-env": "^1.0.7",
     "css-loader": "^0.23.1",
+    "extract-text-webpack-plugin": "^1.0.1",
     "git-rev": "^0.2.1",
     "node-sass": "^3.4.2",
     "nodemon": "^1.9.2",
