--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 
     "start": "npm run development",
     "install": "cd backend && npm install && cd ..",
+    "postinstall": "ncp node_modules/bootstrap-sass/assets/fonts/bootstrap/ public/fonts/",
 
     "deploy-ubuntu": "gulp build-dist && gulp nginx && sudo cp nginx/* /etc/nginx/sites-available/ && sudo nginx -t && sudo service nginx restart",
     "info": "npm-scripts-info",
@@ -49,7 +50,9 @@
     "cross-env": "^1.0.7",
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.8.5",
     "git-rev": "^0.2.1",
+    "ncp": "^2.0.0",
     "node-sass": "^3.4.2",
     "nodemon": "^1.9.2",
     "npm-scripts-info": "^0.3.6",
