--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,7 @@
     "express-validation": "^0.6.0",
     "joi": "^8.3.0",
     "level-ttl": "^3.1.0",
-    "leveldown": "^1.4.4",
+    "leveldown": "=1.4.4",
     "levelup": "^1.3.2",
     "promesso": "^3.0.0",
     "request-promise": "^3.0.0",
