--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "git-rev": "^0.2.1",
+    "html-loader": "^0.4.3",
     "ncp": "^2.0.0",
     "node-sass": "^3.4.2",
     "nodemon": "^1.9.2",
