--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,7 @@
     "level-ttl": "^3.1.0",
     "leveldown": "=1.4.4",
     "levelup": "^1.3.2",
-    "promesso": "^3.0.0",
+    "promesso": "^4.0.0-beta.1",
     "request-promise": "^3.0.0",
     "serve-static": "^1.10.2",
     "x-error": "0.0.10"
