--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "git-rev": "^0.2.1",
     "html-loader": "^0.4.3",
     "ncp": "^2.0.0",
+    "ng-annotate-loader": "^0.1.0",
     "node-sass": "^3.4.2",
     "nodemon": "^1.9.2",
     "npm-scripts-info": "^0.3.6",
