--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,7 @@
     "leveldown": "=1.4.4",
     "levelup": "^1.3.2",
     "promesso": "^4.0.0-beta.1",
-    "request-promise": "^3.0.0",
+    "request": "^2.72.0",
     "serve-static": "^1.10.2",
     "x-error": "0.0.10"
   },
