--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "bluebird": "^3.4.0",
     "body-parser": "^1.15.1",
     "cheerio": "^0.20.0",
+    "electrolyte": "^0.2.6",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
     "express-session-level": "^1.0.0",
