--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
-    "git-rev": "^0.2.1",
+    "git-rev-sync": "^1.6.0",
     "html-loader": "^0.4.3",
     "ncp": "^2.0.0",
     "ng-annotate-loader": "^0.1.0",
