--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "backend": "cross-env NODE_ENV=production node backend/",
     "development": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
     "dev:backend": "nodemon --debug backend/ -w backend/ -V",
-    "dev:frontend": "webpack-dev-server --inline --progress",
+    "dev:frontend": "webpack-dev-server --inline --progress --host 0.0.0.0",
     "production": "npm run build && npm run backend",
     "start": "npm run development",
-    "install": "cd backend && npm install && cd ..",
-    "postinstall": "ncp node_modules/bootstrap-sass/assets/fonts/bootstrap/ public/fonts/",
+
+    "postinstall": "npm run install:backend && npm run install:copy",
+    "install:backend": "cd backend && npm install && cd ..",
+    "install:copy": "ncp node_modules/bootstrap-sass/assets/fonts/bootstrap/ public/fonts/",
+
     "deploy-ubuntu": "gulp build-dist && gulp nginx && sudo cp nginx/* /etc/nginx/sites-available/ && sudo nginx -t && sudo service nginx restart",
     "info": "npm-scripts-info",
     "test": "cd backend && npm test && cd ..",
