clean dependencies, removed webpack-ng-annotate, it DOESNT work with webpack2
@schmod is my new hero

--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "2.0.0-alpha1",
   "description": "alternative interface for AllDebrid",
   "dependencies": {
-    "angular": "^1.5.6",
+    "angular": "^1.5.7",
     "angular-formly": "^8.2.1",
     "angular-formly-templates-bootstrap": "^6.4.0",
-    "angular-ui-router": "^1.0.0-alpha.5",
+    "angular-ui-router": "^1.0.0-beta.1",
     "api-check": "^7.5.5",
     "bootstrap-sass": "^3.3.5",
     "bootswatch-scss": "^3.2.0",
@@ -15,17 +15,21 @@
   },
   "scripts": {
     "clean": "rimraf build && mkdirp build",
+
     "build": "cross-env NODE_ENV=production webpack",
     "backend": "cross-env NODE_ENV=production node backend/",
+
     "development": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
     "dev:backend": "nodemon --debug backend/ -w backend/ -V",
     "dev:frontend": "webpack-dev-server --inline --progress",
+
     "production": "npm run build && npm run backend",
     "start": "npm run development",
-    "install": "cd backend && npm install && cd ..",
-    "postinstall": "ncp node_modules/bootstrap-sass/assets/fonts/bootstrap/ public/fonts/",
-    "deploy-ubuntu": "gulp build-dist && gulp nginx && sudo cp nginx/* /etc/nginx/sites-available/ && sudo nginx -t && sudo service nginx restart",
-    "info": "npm-scripts-info",
+
+    "postinstall": "npm run install:backend && npm run install:fonts",
+    "install:backend": "cd backend && npm install && cd ..",
+    "install:fonts": "ncp node_modules/bootstrap-sass/assets/fonts/bootstrap/ public/fonts/",
+
     "test": "cd backend && npm test && cd ..",
     "test-dev": "cd backend && npm run test-dev && cd .."
   },
@@ -45,22 +49,21 @@
   "homepage": "https://github.com/colthreepv/alldebrid",
   "devDependencies": {
     "babel-loader": "^6.2.4",
-    "babel-preset-es2015-native-modules": "^6.6.0",
+    "babel-plugin-angularjs-annotate": "^0.2.0",
+    "babel-preset-es2015-webpack": "^6.4.1",
     "clean-webpack-plugin": "^0.1.9",
     "concurrently": "^2.1.0",
     "cross-env": "^1.0.7",
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.8.5",
+    "file-loader": "^0.9.0",
     "git-rev-sync": "^1.6.0",
     "html-loader": "^0.4.3",
     "ncp": "^2.0.0",
-    "ng-annotate-loader": "^0.1.0",
-    "node-sass": "^3.4.2",
+    "node-sass": "^3.8.0",
     "nodemon": "^1.9.2",
-    "npm-scripts-info": "^0.3.6",
     "rimraf": "^2.5.2",
-    "sass-loader": "^3.2.0",
+    "sass-loader": "^4.0.0",
     "stats-webpack-plugin": "^0.3.1",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
