--- a/backend/package.json
+++ b/backend/package.json
@@ -12,8 +12,8 @@
     "express": "^4.13.4",
     "express-session": "^1.13.0",
     "express-session-level": "^1.0.0",
-    "express-validation": "^0.6.0",
-    "joi": "^8.3.0",
+    "express-validation": "^1.0.0",
+    "joi": "^9.0.0-9",
     "level-ttl": "^3.1.0",
     "leveldown": "=1.4.4",
     "levelup": "^1.3.2",
