--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "concurrently": "^2.1.0",
     "cross-env": "^1.0.7",
     "css-loader": "^0.23.1",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "extract-text-webpack-plugin": "^2.0.0-beta.1",
     "file-loader": "^0.9.0",
     "git-rev-sync": "^1.6.0",
     "html-loader": "^0.4.3",
