--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "alldebrid",
-  "version": "2.0.0-alpha1",
+  "version": "2.0.0-beta1",
   "description": "alternative interface for AllDebrid",
   "dependencies": {
     "angular": "^1.5.7",
