--- a/backend/package.json
+++ b/backend/package.json
@@ -13,11 +13,11 @@
     "express-session": "^1.13.0",
     "express-session-level": "^1.0.0",
     "express-validation": "^1.0.0",
-    "joi": "^9.0.0-9",
+    "joi": "^9.0.1",
     "level-ttl": "^3.1.0",
     "leveldown": "=1.4.4",
     "levelup": "^1.3.2",
-    "promesso": "^4.0.0-beta.1",
+    "promesso": "^5.0.0-beta.1",
     "request": "^2.72.0",
     "serve-static": "^1.10.2",
     "x-error": "0.0.10"
