--- a/package.json
+++ b/package.json
@@ -1,32 +1,28 @@
 {
   "name": "alldebrid",
-  "version": "2.0.0-beta1",
+  "version": "2.0.0-beta2",
   "description": "alternative interface for AllDebrid",
   "dependencies": {
     "angular": "^1.5.7",
     "angular-messages": "^1.5.8",
-    "angular-ui-router": "^1.0.0-beta.1",
+    "angular-ui-router": "^1.0.0-beta.3",
     "api-check": "^7.5.5",
     "bootstrap-sass": "^3.3.5",
     "bootswatch-scss": "^3.2.0",
-    "eventemitter3": "^1.2.0",
+    "eventemitter3": "^2.0.0",
     "jsonpipe": "^2.0.0"
   },
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack --progress -p",
     "backend": "cross-env NODE_ENV=production node backend/",
-
     "development": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
     "dev:backend": "nodemon --debug backend/ -w backend/ -V",
     "dev:frontend": "webpack-dev-server --inline --progress",
-
     "production": "npm run build && npm run backend",
     "start": "npm run development",
-
     "postinstall": "npm run install:backend && npm run install:fonts",
     "install:backend": "cd backend && npm install && cd ..",
     "install:fonts": "ncp node_modules/bootstrap-sass/assets/fonts/bootstrap/ public/fonts/",
-
     "test": "cd backend && npm test && cd ..",
     "test-dev": "cd backend && npm run test-dev && cd .."
   },
@@ -45,21 +41,22 @@
   },
   "homepage": "https://github.com/colthreepv/alldebrid",
   "devDependencies": {
-    "babel-loader": "^6.2.4",
-    "babel-plugin-angularjs-annotate": "^0.4.0",
-    "babel-preset-es2015-webpack": "^6.4.1",
+    "babel-core": "^6.14.0",
+    "babel-loader": "^6.2.5",
+    "babel-plugin-angularjs-annotate": "^0.5.1",
+    "babel-preset-es2015": "^6.14.0",
     "clean-webpack-plugin": "^0.1.10",
     "concurrently": "^2.1.0",
-    "cross-env": "^2.0.0",
-    "css-loader": "^0.23.1",
+    "cross-env": "^3.0.0",
+    "css-loader": "^0.25.0",
     "extract-text-webpack-plugin": "^2.0.0-beta.1",
     "file-loader": "^0.9.0",
-    "git-rev-sync": "^1.6.0",
-    "html-loader": "^0.4.3",
+    "git-rev-sync": "^1.7.1",
+    "html-loader": "^0.4.4",
     "ncp": "^2.0.0",
-    "node-sass": "^3.8.0",
-    "nodemon": "^1.9.2",
-    "sass-loader": "^4.0.0",
+    "node-sass": "^3.10.0",
+    "nodemon": "^1.10.2",
+    "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^2.1.0-beta.7",
