--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,6 @@
 {
-  "presets": ["es2015-webpack"],
+  "presets": [
+    ["es2015", { "modules": false }]
+  ],
   "plugins": ["angularjs-annotate"]
 }
