--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "level-ttl": "^3.1.0",
     "leveldown": "=1.4.4",
     "levelup": "^1.3.2",
+    "morgan": "^1.7.0",
     "promesso": "^5.0.0-beta.1",
     "request": "^2.72.0",
     "serve-static": "^1.10.2",
