--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "express-session": "^1.13.0",
     "express-session-level": "^1.0.0",
     "express-validation": "^1.0.0",
+    "hapi": "^15.1.1",
     "joi": "^9.0.1",
     "level-ttl": "^3.1.0",
     "leveldown": "=1.4.4",
