--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,7 @@
     "express-validation": "^1.0.0",
     "joi": "^9.0.1",
     "level-ttl": "^3.1.0",
-    "leveldown": "=1.4.4",
+    "leveldown": "^1.5.0",
     "levelup": "^1.3.2",
     "morgan": "^1.7.0",
     "promesso": "^5.0.0-beta.1",
